[package]
name = "aptt"
version = "4.0.0"
description = "A Perfect Time Tracker"
edition = "2024"

[lib]
name = "aptt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
